# GrimoireVFS

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml  test-pypi.yml
docs/: user_guide.md
docs/api/: grimoire.html  index.html  search.js
docs/schema/: manifest.v2.schema.json
grimoire/: __init__.py  converter.py  utils.py
grimoire/archive/: __init__.py  builder.py  reader.py
grimoire/core/: __init__.py  binary_io.py  schema.py
grimoire/hooks/: __init__.py  base.py  checksum.py  crypto.py  rclone.py
grimoire/manifest/: builder.py  reader.py
scripts/: release.ps1
src/grimoire/: __init__.py  converter.py  exceptions.py  utils.py
src/grimoire/archive/: reader.py
src/grimoire/core/: batch.py  string_table.py
src/grimoire/hooks/: __init__.py  checksum.py  crypto.py  external.py  fhash.py  rclone.py  registry.py
src/grimoire/manifest/: __init__.py  builder.py  reader.py
tests/: _test.py  compare_storage.py  conftest.py  test_archive.py  test_batch.py  test_converter.py  test_core_schema.py  test_core_utils.py  test_external.py  test_fhash.py  test_hooks_checksum.py  test_hooks_crypto.py  test_hooks_custom.py  test_hooks_registry.py  test_integration.py  test_manifest.py  test_rclone.py
