[project]
name = "grimoirevfs"
version = "0.1.3"
description = "轻量级零依赖 Python 二进制资源管理库，支持 Manifest 清单校验和 Archive 资源打包。"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Virace", email = "Virace2020@outlook.com" }
]
requires-python = ">=3.7"
dependencies = []
keywords = ["vfs", "virtual-filesystem", "archive", "manifest", "resource", "game", "binary"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
    "Topic :: Games/Entertainment",
]

[project.urls]
Homepage = "https://github.com/Virace/GrimoireVFS"
Repository = "https://github.com/Virace/GrimoireVFS"
Documentation = "https://github.com/Virace/GrimoireVFS/blob/main/docs/user_guide.md"

[project.optional-dependencies]
rclone = []  # RcloneHashHook 需要系统安装 rclone，无 Python 依赖
fhash = []   # FhashHook 需要系统安装 fhash，无 Python 依赖

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "grimoire"
source-include = [
    "README.md",
    "LICENSE",
    "docs/**/*.md",
    ]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "pdoc>=13.1.1",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "rclone: 需要 rclone 环境的测试",
    "fhash: 需要 fhash 环境的测试",
    "slow: 耗时较长的测试",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
